[package]
name = "docker-ddns"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.19.4"
cloudflare = "0.14.0"
color-eyre = "0.6.5"
eyre = "0.6.12"
futures = "0.3.31"
russh = "0.54.6"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["fs", "macros", "process"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-tree = "0.4.1"
